SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/DealHub_Subscription__c.object-meta.xml
<CustomObject>
    <label>DealHub Subscription</label>
    <nameField>
        <displayFormat>SUBS-{00000000}</displayFormat>
        <label>DealHub Subscription Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>DealHub Subscriptions</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>