SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/fields/DealHub_Account__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>DealHub Subscriptions</relationshipLabel>
    <relationshipName>DealHub_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>