SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/fields/DealHub_Activate_Time__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Activate_Time__c</fullName>
    <formula>DealHub_Subscription_Start_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Activate Time</label>
    <type>Date</type>
</CustomField>