SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/fields/DealHub_Discount__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Discount__c</fullName>
    <label>Discount</label>
    <precision>5</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>