SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/fields/DealHub_Expire_Time__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Expire_Time__c</fullName>
    <formula>DealHub_Subscription_End_Date__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Expire Time</label>
    <type>Date</type>
</CustomField>