SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/fields/DealHub_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>DealHub Subscriptions</relationshipLabel>
    <relationshipName>DealHub_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>