SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/fields/DealHub_Opportunity_Line_Item_Id__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Opportunity_Line_Item_Id__c</fullName>
    <label>Opportunity Line Item Id</label>
    <length>20</length>
    <type>Text</type>
</CustomField>