SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/fields/DealHub_Original_Subscription_Line__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Original_Subscription_Line__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Original Subscription Line</label>
    <referenceTo>DealHub_Subscription__c</referenceTo>
    <relationshipLabel>DealHub Subscriptions</relationshipLabel>
    <relationshipName>DealHub_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>