SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/fields/DealHub_Product__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>DealHub Subscriptions</relationshipLabel>
    <relationshipName>DealHub_Subscriptions</relationshipName>
    <type>Lookup</type>
</CustomField>