SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/fields/DealHub_Quote_Currency__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Quote_Currency__c</fullName>
    <label>Quote Currency</label>
    <length>10</length>
    <type>Text</type>
</CustomField>