SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/fields/DealHub_Renewable_opportunity_created__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Renewable_opportunity_created__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Renewable opportunity created</label>
    <type>Checkbox</type>
</CustomField>