SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/fields/DealHub_Sales_Price__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Sales_Price__c</fullName>
    <label>Sales Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>