SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/fields/DealHub_Subscription_End_Date__c.field-meta.xml
<CustomField>
    <fullName>DealHub_Subscription_End_Date__c</fullName>
    <label>Subscription End Date</label>
    <type>Date</type>
</CustomField>