SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/fields/IsActive__c.field-meta.xml
<CustomField>
    <fullName>IsActive__c</fullName>
    <formula>AND(
TODAY()&lt;DealHub_Subscription_End_Date__c,
TODAY()&gt;=DealHub_Subscription_Start_Date__c)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>IsActive</label>
    <type>Checkbox</type>
</CustomField>