SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/fields/Opp_ARR__c.field-meta.xml
<CustomField>
    <fullName>Opp_ARR__c</fullName>
    <label>Opp_ARR</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Currency</type>
</CustomField>