SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>DealHub_Status__c</columns>
    <columns>DealHub_Opportunity__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>DealHub_Subscription_Start_Date__c</columns>
    <columns>DealHub_Subscription_End_Date__c</columns>
    <columns>DealHub_Opportunity_Line_Item_Id__c</columns>
    <columns>DealHub_Product__c</columns>
    <columns>DealHub_Discount__c</columns>
    <columns>DealHub_Quantity__c</columns>
    <columns>DealHub_Sales_Price__c</columns>
    <columns>DealHub_Quote_Currency__c</columns>
    <columns>DealHub_Activate_Time__c</columns>
    <columns>DealHub_Expire_Time__c</columns>
    <columns>DealHub_Account__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>