SFDC_LD_Packages/objects-layouts/main/default/objects/DealHub_Subscription__c/listViews/All1.listView-meta.xml
<ListView>
    <fullName>All1</fullName>
    <columns>DealHub_Account__c</columns>
    <columns>DealHub_Product_Code__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>DealHub_Subscription_End_Date__c</columns>
    <columns>DealHub_Subscription_Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>